Update project section and navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -872,8 +872,13 @@ main {
 
 
 /*-----------------------------------*\
-  #PORTFOLIO
+  #PROJECTS
 \*-----------------------------------*/
+
+.project-placeholder {
+  text-align: center;
+  margin-bottom: 20px;
+}
 
 .filter-list { display: none; }
 
