--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1041,6 +1041,15 @@ main {
 
 .blog-posts { margin-bottom: 10px; }
 
+.blog-site-list {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 15px;
+  padding-bottom: 20px;
+  padding-left: 7px;
+}
+
 .blog-posts-list {
   display: grid;
   grid-template-columns: 1fr;
